--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html, body {
     display: flex;
     flex-direction: column;
     max-width: 320px;
-    margin: 200px auto;
+    margin: 100px auto;
 }
 
 img {
@@ -41,6 +41,7 @@ button {
     text-align: center;
     font-family: 'Fira Mono', sans-serif;
     transition-duration: 0.1s;
+    width: 155px;
 }
 
 button:hover {
@@ -49,4 +50,14 @@ button:hover {
 
 button:active {
     transform: translateY(2px);
+}
+
+.shopping-button {
+    margin: 5px 0;
+}
+
+#shopping-list {
+    text-align: center;
+    font-size: 20px;
+    list-style-type: circle;
 }
