--- a/style.css
+++ b/style.css
@@ -59,5 +59,5 @@ button:active {
 #shopping-list {
     text-align: center;
     font-size: 20px;
-    list-style-type: circle;
+    list-style-type: none;
 }
