--- a/style.css
+++ b/style.css
@@ -57,7 +57,6 @@ button:active {
 }
 
 #shopping-list {
-    text-align: center;
     font-size: 20px;
-    list-style-type: none;
+    list-style-image: url("./assets/pokeball.png");
 }
